mantra/src/cmd/collect/requirements/markup/markdown/tests/snapshots/mantra__cmd__collect__requirements__markup__markdown__tests__dot_nested_requirements.snap
---
source: mantra/src/cmd/collect/requirements/markup/markdown/tests/mod.rs
---
RequirementSchema(
  schema_version: "0.9.0",
  product_id: Some("product-id"),
  requirements: [
    Requirement(
      id: "req-1",
      parents: None,
      title: "First Requirement Title",
      description: Some("Description for the first requirement.\n"),
      origin: {
        "line": 1,
      },
      manual_verification: false,
      deprecated: false,
      exclude: false,
      optional: false,
      replaces: None,
      properties: None,
    ),
    Requirement(
      id: "req-1.sub-1",
      parents: None,
      title: "First Sub-Requirement of the First Requirement",
      description: Some("Description of the first sub-requirement of [req_link(\"req-1\")].\nThis description is not part of the description for [req_link(\"req-1\")].\n"),
      origin: {
        "line": 5,
      },
      manual_verification: false,
      deprecated: false,
      exclude: false,
      optional: false,
      replaces: None,
      properties: None,
    ),
    Requirement(
      id: "req-1.sub-2",
      parents: None,
      title: "Second Sub-Requirement of the First Requirement",
      description: Some("Description of the second sub-requirement of [req_link(\"req-1\")].\nThis description is not part of the description for [req_link(\"req-1\")].\nA warning must be set, because the heading level does not match the expected indentation of two.\n"),
      origin: {
        "line": 10,
      },
      manual_verification: false,
      deprecated: false,
      exclude: false,
      optional: false,
      replaces: None,
      properties: None,
    ),
    Requirement(
      id: "req-2",
      parents: None,
      title: "Second Requirement Title",
      description: Some("Description for the second requirement.\n"),
      origin: {
        "line": 17,
      },
      manual_verification: false,
      deprecated: false,
      exclude: false,
      optional: false,
      replaces: None,
      properties: None,
    ),
    Requirement(
      id: "req-2.sub-1",
      parents: None,
      title: "First Sub-Requirement of the Second Requirement",
      description: Some("Description of the first sub-requirement of [req_link(\"req-2\")].\nThis description is not part of the description for [req_link(\"req-2\")].\nA warning must be set, because the heading level does not match the expected indentation of two.\n"),
      origin: {
        "line": 21,
      },
      manual_verification: false,
      deprecated: false,
      exclude: false,
      optional: false,
      replaces: None,
      properties: None,
    ),
    Requirement(
      id: "req-3",
      parents: None,
      title: "Third Requirement Title",
      description: Some("Description for the third requirement.\n"),
      origin: {
        "line": 28,
      },
      manual_verification: false,
      deprecated: false,
      exclude: false,
      optional: false,
      replaces: None,
      properties: None,
    ),
    Requirement(
      id: "req-3.sub-1",
      parents: None,
      title: "First Sub-Requirement of the Third Requirement",
      description: Some("Description of the first sub-requirement of [req_link(\"req-3\")].\nThis description is not part of the description for [req_link(\"req-3\")].\n"),
      origin: {
        "line": 32,
      },
      manual_verification: false,
      deprecated: false,
      exclude: false,
      optional: false,
      replaces: None,
      properties: None,
    ),
    Requirement(
      id: "req-3.sub-1.sub-sub-1",
      parents: None,
      title: "First Sub-Sub-Requirement of the Third Requirement",
      description: Some("Description of the first sub-sub-requirement of [req_link(\"req-3.sub-1\")].\nThis description is not part of the description for [req_link(\"req-3.sub-1\")].\n"),
      origin: {
        "line": 37,
      },
      manual_verification: false,
      deprecated: false,
      exclude: false,
      optional: false,
      replaces: None,
      properties: None,
    ),
    Requirement(
      id: "req-3.sub-1.sub-sub-2",
      parents: None,
      title: "Second Sub-Sub-Requirement of the Third Requirement",
      description: Some("Description of the second sub-sub-requirement of [req_link(\"req-3.sub-1\")].\nThis description is not part of the description for [req_link(\"req-3.sub-1\")].\nA warning must be set, because the heading level does not match the expected indentation of three.\n"),
      origin: {
        "line": 42,
      },
      manual_verification: false,
      deprecated: false,
      exclude: false,
      optional: false,
      replaces: None,
      properties: None,
    ),
    Requirement(
      id: "req-3.sub-1.sub-sub-3",
      parents: None,
      title: "Third Sub-Sub-Requirement of the Third Requirement",
      description: Some("Description of the third sub-sub-requirement of [req_link(\"req-3.sub-1\")].\nThis description is not part of the description for [req_link(\"req-3.sub-1\")].\nA warning must be set, because the heading level does not match the expected indentation of three.\n"),
      origin: {
        "line": 49,
      },
      manual_verification: false,
      deprecated: false,
      exclude: false,
      optional: false,
      replaces: None,
      properties: None,
    ),
  ],
  properties: None,
  origin: Some({
    "file": "dot_nested_requirements.md",
  }),
)
