mantra/src/cmd/collect/requirements/markup/markdown/tests/snapshots/mantra__cmd__collect__requirements__markup__markdown__tests__mantra_known_fields.snap
---
source: mantra/src/cmd/collect/requirements/markup/markdown/tests/mod.rs
---
RequirementSchema(
  schema_version: "0.8.0",
  product_id: Some("product-id"),
  requirements: [
    Requirement(
      id: "req-1",
      parents: None,
      title: "Title",
      description: None,
      origin: {
        "line": 1,
      },
      manual_verification: true,
      deprecated: false,
      exclude: false,
      optional: false,
      replaces: None,
      properties: None,
    ),
    Requirement(
      id: "req-2",
      parents: Some([
        RequirementPk(
          id: "req-1",
          product_id: None,
        ),
      ]),
      title: "Title",
      description: Some("Some description for the requirement.\n"),
      origin: {
        "line": 5,
      },
      manual_verification: false,
      deprecated: false,
      exclude: false,
      optional: true,
      replaces: None,
      properties: None,
    ),
    Requirement(
      id: "req-3",
      parents: Some([
        RequirementPk(
          id: "req-1",
          product_id: None,
        ),
      ]),
      title: "Title",
      description: None,
      origin: {
        "line": 12,
      },
      manual_verification: true,
      deprecated: true,
      exclude: true,
      optional: false,
      replaces: Some([
        "req-2",
      ]),
      properties: None,
    ),
  ],
  properties: None,
  origin: Some({
    "file": "mantra_known_fields.md",
  }),
)
