mantra/src/cmd/collect/requirements/markup/markdown/tests/snapshots/mantra__cmd__collect__requirements__markup__markdown__tests__single_requirement.snap
---
source: mantra/src/cmd/collect/requirements/markup/markdown/tests/mod.rs
---
RequirementSchema(
  schema_version: "0.9.0",
  product_id: Some("product-id"),
  requirements: [
    Requirement(
      id: "req-id",
      parents: None,
      title: "Requirement Title",
      description: Some("Requirement description.\n## Additional section\nThis is also part of the description, because it is no sub-requirement definition.\n"),
      origin: {
        "line": 1,
      },
      manual_verification: false,
      deprecated: false,
      exclude: false,
      optional: false,
      replaces: None,
      properties: None,
    ),
  ],
  properties: None,
  origin: Some({
    "file": "single_requirement.md",
  }),
)
